Added seed support (unfinished)